syntax = "proto3";

option java_package = "br.com.houseseeker.service.proto";
option java_multiple_files = true;

import "message/request_commons.proto";
import "message/response_commons.proto";
import "message/comparison_commons.proto";
import "message/urban_property_convenience.proto";

message GetUrbanPropertyConveniencesRequest {
  message ProjectionsData {
    optional bool id = 1;
    optional bool urban_property = 2;
    optional bool description = 3;
  }
  message ClausesData {
    optional Int32ComparisonData id = 1;
    optional Int32ComparisonData urban_property_id = 2;
    optional StringComparisonData description = 3;
  }
  message OrdersData {
    optional OrderDetailsData id = 1;
    optional OrderDetailsData urban_property_id = 2;
    optional OrderDetailsData description = 3;
  }
  optional ProjectionsData projections = 1;
  optional ClausesData clauses = 2;
  optional PaginationRequestData pagination = 3;
  optional OrdersData orders = 4;
}

message GetUrbanPropertyConveniencesResponse {
  repeated UrbanPropertyConvenienceData urbanPropertyConveniences = 1;
  PaginationResponseData pagination = 2;
}

service UrbanPropertyConvenienceDataService {
  rpc GetUrbanPropertyConveniences(GetUrbanPropertyConveniencesRequest) returns (GetUrbanPropertyConveniencesResponse);
}